add bcv_parser library to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,7 @@
     <![endif]-->
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
+      <script src="../bower_components/bcv-parser/en_bcv_parser.min.js"></script>
       <script src="../bower_components/jquery/dist/jquery.js"></script>
       <script src="../bower_components/angular/angular.js"></script>
       <script src="../bower_components/angular-resource/angular-resource.js"></script>
