--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      Stiff goes here!      
+      Stuff goes here!      
     </div>
   </div>
 
