--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,13 +4,26 @@
   <div class="container">
     <h1>Welcome to BIYBL</h1>
     <p class="lead">Bible in your best language!<br />Bring the word of God to everyone!</p>
+    <p>This app allows you to access the relevant bible verses / passages for the church service that you are attending.<br />
+    Select your church from the filter below, choose a language and that's it!
   </div>
 </header>
 
 <div class="container">
+  <form class="thing-form">
+    <p class="input-group full-width">
+      <input type="text" class="form-control" placeholder="Type church name to filter..." ng-model="ref_list">
+    </p>
+  </form>
+
   <div class="row">
     <div class="col-lg-12">
-      Stuff goes here!      
+      <h1 class="page-header">Churches:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="church in churches">
+        <li>
+        	<h4>{{church.name}}</h4>
+        </li>
+      </ul>
     </div>
   </div>
 
