--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,16 +12,16 @@
 <div class="container">
   <form class="thing-form">
     <p class="input-group full-width">
-      <input type="text" class="form-control" placeholder="Type church name to filter..." ng-model="ref_list">
+      <input type="text" class="form-control" placeholder="Type church name to filter..." ng-model="searchKeyword">
     </p>
   </form>
 
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Churches:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="church in churches">
+      <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="church in churches | orderBy: 'church_name' | filter:searchKeyword:strict ">
         <li>
-        	<h4>{{church.name}}</h4>
+        	<a href="/{{church.name}}">{{church.church_name}} ({{church.name}}) &raquo;</a>
         </li>
       </ul>
     </div>
