--- a/client/app/verses/verses.html
+++ b/client/app/verses/verses.html
@@ -12,20 +12,21 @@
     <p class="input-group">
       <input type="text" class="form-control" placeholder="Enter bible verses..." ng-model="ref_list">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="get_refs()">Get Verses</button>
+        <button type="submit" class="btn btn-primary" ng-click="get_refs()">Get Passages</button>
       </span>
     </p>
   </form>
 
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Bible References:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="reference in bvcParser.passages">
+      <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="reference in bcvParser.passages">
         <li>
-        	<h4>{{reference.ref}}</h4>
-        	<p>{{reference.text}}</p>
+        	<p ng-bind-html="reference.text"></p>
         </li>
       </ul>
+    </div>
+    <div class="col-lg-12 right-align" ng-show="bcvParser.passages.length > 0">
+        <button type="submit" id="save" class="btn btn-primary" ng-click="save_refs()">Save Passages</button> 
     </div>
   </div>
 
