add client view

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/verses/verses.css">
+      <link rel="stylesheet" href="app/zchurch/church.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -98,6 +99,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/verses/verses.controller.js"></script>
           <script src="app/verses/verses.js"></script>
+          <script src="app/zchurch/church.controller.js"></script>
+          <script src="app/zchurch/church.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
