--- a/client/app/zchurch/church.html
+++ b/client/app/zchurch/church.html
@@ -3,21 +3,13 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>Welcome to {{church_name}}</h1>
-    <p class="lead" ng-hide="langu">Choose your your language</p>
+    <p class="lead" ng-hide="langu">Choose your language</p>
   </div>
 </header>
 <div class="container" ng-hide="langu"> 
 	<ul class="nav centered lang-buttons">
 		<li ng-repeat="(key, language) in dbpGrabber.langmap | orderBy: 'key' ">
 		    <button type="submit" class="btn btn-primary" ng-click="set_language(key);">{{ key }} - {{ language[2] }}</button>
-		</li>
-	</ul>
-</div>
-
-<div class="container" ng-show="langu"> 
-	<ul class="nav centered lang-buttons">
-		<li>
-	  		<button type="submit" class="btn btn-primary " ng-click="remove_language();">Change Language</button>
 		</li>
 	</ul>
 </div>
@@ -32,6 +24,12 @@
       </ul>
     </div>
   </div>
-
 </div>
 
+<div class="container" ng-show="langu"> 
+	<ul class="nav centered lang-buttons">
+		<li>
+	  		<button type="submit" class="btn btn-primary " ng-click="remove_language();">Change Language</button>
+		</li>
+	</ul>
+</div>
