--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/findchurch/findchurch.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/verses/verses.css">
       <link rel="stylesheet" href="app/zchurch/church.css">
@@ -95,6 +96,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/bcvParser/bcvParser.service.js"></script>
           <script src="app/dbpGrabber/dbpGrabber.service.js"></script>
+          <script src="app/findchurch/findchurch.controller.js"></script>
+          <script src="app/findchurch/findchurch.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/verses/verses.controller.js"></script>
