--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,7 +4,7 @@
   <div class="container">
     <h1>Welcome to BIYBL</h1>
     <p class="lead">Bible in your best language!<br />Bring the word of God to everyone!</p>
-    <p>Type in a bible reference. (You can add multiple references separated by commaY.)</p>
+    <p>Type in a bible reference. (You can add multiple references separated by commas.)</p>
   </div>
   <form class="thing-form">
     <p class="input-group">
