Many formatting and language cleanups

--- a/client/app/findchurch/findchurch.html
+++ b/client/app/findchurch/findchurch.html
@@ -2,16 +2,14 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Welcome to BIYBL</h1>
-    <p class="lead">Bible in your best language!<br />Bring the word of God to everyone!</p>
-    <p>Choose a church or type to filter</p>
+    <h1>Bible In Your Best Language</h1>
   </div>
 </header>
 
 <div class="container">
   <form class="thing-form">
     <p class="input-group full-width">
-      <input type="text" class="form-control" placeholder="Type church name to filter..." ng-model="searchKeyword">
+      <input type="text" class="form-control" placeholder="Search" ng-model="searchKeyword">
     </p>
   </form>
 
