--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,17 +1,23 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
+<header class="hero-unit" id="banner">
+  <div class="container">
+    <h1>Bible In Your Best Language</h1>
+  </div>
+</header>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Sign up</h1>
+      <h1>Church Signup</h1>
     </div>
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="register(form)" novalidate>
 
         <div class="form-group" ng-class="{ 'has-success': form.church_name.$valid && submitted,
                                             'has-error': form.church_name.$invalid && submitted }">
-          <label>Church Name</label>
-
+          <label>Church Full Name</label>
+          <p>If your church has a name which is common, include a geographical disambiguator, e.g. "King's Church, Sheffield"</p>
           <input type="text" name="name" class="form-control" ng-model="user.church_name"
                  required/>
           <p class="help-block" ng-show="form.name.$error.required && submitted">
@@ -22,7 +28,7 @@
         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
                                             'has-error': form.name.$invalid && submitted }">
           <label>Short Name</label>
-
+          <p>This appears in your church's URL, i.e. <tt>http://biybl.cogito.com/<i>churchname</i></tt></p>
           <input type="text" name="name" class="form-control" ng-model="user.name"
                  required/>
           <p class="help-block" ng-show="form.name.$error.required && submitted">
@@ -33,7 +39,7 @@
         <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
                                             'has-error': form.email.$invalid && submitted }">
           <label>Email</label>
-
+          <p>You'll use this to log in each week and change the passage(s). Better to use a generic church email address.</p>
           <input type="email" name="email" class="form-control" ng-model="user.email"
                  required
                  mongoose-error/>
@@ -69,9 +75,6 @@
           <button class="btn btn-inverse btn-lg btn-login" type="submit">
             Sign up
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/login">
-            Login
-          </a>
         </div>
 
       </form>
