--- a/client/app/verses/verses.html
+++ b/client/app/verses/verses.html
@@ -2,15 +2,15 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Church Verse Selection</h1>
-    <p class="lead">Choose your verses</p>
+    <h1>Choose Passages</h1>
   </div>
 </header>
 
 <div class="container">
   <form class="thing-form">
+    <p>Enter the passage reference(s) for this week's meeting:
     <p class="input-group">
-      <input type="text" class="form-control" placeholder="Enter bible verses..." ng-model="ref_list">
+      <input type="text" class="form-control" placeholder="e.g. John 3:16, Ephesians 2:1-10" ng-model="ref_list">
       <span class="input-group-btn">
         <button type="submit" class="btn btn-primary" ng-click="get_refs()">Get Passages</button>
       </span>
@@ -26,7 +26,7 @@
       </ul>
     </div>
     <div class="col-lg-12 right-align" ng-show="bcvParser.passages.length > 0">
-        <button type="submit" id="save" class="btn btn-primary" ng-click="save_refs()">Save Passages</button> 
+        <button type="submit" id="save" class="btn btn-primary" ng-click="save_refs()">Save Passage References</button>
     </div>
   </div>
 
