--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
     <footer class="footer">
       <div class="container">
           <p>
-            Built by BIYBL team at C4TK Global Hackathon |
+            Built for ✝  at the <a href="http://www.kingdomcode.uk/hackathon/">C4TK Global Hackathon, London</a> by
             <a href="https://twitter.com/cogiva">@cogiva</a>,
             <a href="https://twitter.com/gerv">@gerv</a>,
             <a href="https://twitter.com/DavidFedor">@DavidFedor</a>
@@ -83,9 +83,9 @@
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
 
-        
+
         <!-- build:js(.tmp) app/app.js -->
-        
+
         <script src="app/app.js"></script>
           <!-- injector:js -->
           <script src="app/account/account.js"></script>
