A few more cleanups

--- a/client/app/verses/verses.html
+++ b/client/app/verses/verses.html
@@ -2,7 +2,7 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Choose Passages</h1>
+    <h1>Bible In Your Best Language</h1>
   </div>
 </header>
 
@@ -12,7 +12,7 @@
     <p class="input-group">
       <input type="text" class="form-control" placeholder="e.g. John 3:16, Ephesians 2:1-10" ng-model="ref_list">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="get_refs()">Get Passages</button>
+        <button type="submit" class="btn btn-primary" ng-click="get_refs()">Get Passage Text</button>
       </span>
     </p>
   </form>
