--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -73,7 +73,7 @@
 
         <div>
           <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Sign up
+            Sign Up
           </button>
         </div>
 
