--- a/client/app/zchurch/church.html
+++ b/client/app/zchurch/church.html
@@ -3,10 +3,12 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>Welcome to {{church_name}}</h1>
-    <p class="lead" ng-hide="langu">Choose your language</p>
   </div>
 </header>
-<div class="container" ng-hide="langu"> 
+
+
+<div class="container" ng-hide="langu">
+  <p class="centered">Please choose your language:</p>
 	<ul class="nav centered lang-buttons">
 		<li ng-repeat="(key, language) in dbpGrabber.langmap | orderBy: 'key' ">
 		    <button type="submit" class="btn btn-primary" ng-click="set_language(key);">{{ key }} - {{ language[2] }}</button>
@@ -26,7 +28,7 @@
   </div>
 </div>
 
-<div class="container" ng-show="langu"> 
+<div class="container" ng-show="langu">
 	<ul class="nav centered lang-buttons">
 		<li>
 	  		<button type="submit" class="btn btn-primary " ng-click="remove_language();">Change Language</button>
