Fill in About page

--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -8,6 +8,33 @@
 
 <div class="container">
   <div class="row col-sm-12">
-  	copy goes here...
+  	<h1>About BIYBL</h1>
+
+    <p>BIYBL - Bible In Your Best Language - helps speakers of other languages
+    engage deeply with God's word during church events.</p>
+
+    <p>Many churches are blessed with foreign visitors who do not speak the
+    language the service is conducted in well, if at all. They could be
+    students, refugees, immigrants or simply holidaymakers. These people have
+    been drawn to Christians and their meetings, but how do we help
+    them leave the building with more than just bemusement?</p>
+
+    <p>For your church to use BIYBL, sign up on the site. You'll define a
+    username and password that you or your church administrator will use to
+    log in each week to tell BIYBL the passages you are studying that week.
+    You will also be given a well-known URL. This URL
+    can be printed in your church bulletin, turned into a QR code and pasted
+    into your pew Bibles, or set as the home page for the cheap tablets your
+    church hands out on the door to foreign visitors.</p>
+
+    <p>That well-known URL simply provides a list of languages to choose from.
+    When the visitor recognises and chooses their language, they are
+    immediately presented with the week's passage(s) in that language. They
+    can then refer to this while the Word is being read and preached, to help
+    them understand better what is going on.</p>
+
+    <p>BIYBL is a free service built in October 2015 at the London instance of
+    the Code for the Kingdom Global Hackathon, by Ben Drury, Gervase Markham
+    and David Fedor.</p>
   </div>
 </div>
