--- a/client/app/verses/verses.html
+++ b/client/app/verses/verses.html
@@ -32,5 +32,12 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-lg-12">
+      The URL for your church to publish and use is:
+      &lt;<tt><a href="http://biybl.cogiva.com:9000/{{ church }}">http://biybl.cogiva.com:9000/{{ church }}</a></tt>&gt;.
+    </div>
+  </div>
+
 </div>
 
