--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -19,19 +19,37 @@
     been drawn to Christians and their meetings, but how do we help
     them leave the building with more than just bemusement?</p>
 
+    <h2>For Individuals</h2>
+
+    <p>If you find yourself sitting next to someone who is clearly lost
+    Bible due to language issues, bring up the site on your phone,
+    enter the passage reference, and then hand it to them. It will hopefully
+    be obvious to them what to do - they can choose their language, and then
+    read the passage in it. They
+    can then refer to this while the Word is being read and preached, to help
+    them understand better what is going on.</p>
+
+    <h2>For Churches</h2>
+
+    <p>Churches have the opportunity to have BIYBL remember the passage(s)
+    you are studying that week, and get a static and readable URL which will
+    Do The Right Thing each time.</p>
+
     <p>For your church to use BIYBL, sign up on the site. You'll define a
     username and password that you or your church administrator will use to
     log in each week to tell BIYBL the passages you are studying that week.
-    You will also be given a well-known URL. This URL
+    You will also be given a URL which does not change. This URL
     can be printed in your church bulletin, turned into a QR code and pasted
     into your pew Bibles, or set as the home page for the cheap tablets your
-    church hands out on the door to foreign visitors.</p>
+    church lends to foreign visitors.</p>
 
     <p>That well-known URL simply provides a list of languages to choose from.
     When the visitor recognises and chooses their language, they are
     immediately presented with the week's passage(s) in that language. They
     can then refer to this while the Word is being read and preached, to help
     them understand better what is going on.</p>
+
+    <br>
 
     <p>BIYBL is a free service built in October 2015 at the London instance of
     the Code for the Kingdom Global Hackathon, by Ben Drury, Gervase Markham
