--- a/client/app/zchurch/church.html
+++ b/client/app/zchurch/church.html
@@ -8,30 +8,32 @@
 
 
 <div class="container" ng-hide="langu">
-  <p class="centered">Please choose your language:</p>
-	<ul class="nav centered lang-buttons">
-		<li ng-repeat="(key, language) in dbpGrabber.langmap | orderBy: 'key' ">
-		    <button type="submit" class="btn btn-primary" ng-click="set_language(key);">{{ key }} - {{ language[2] }}</button>
-		</li>
-	</ul>
-</div>
-
-<div class="container" ng-show="langu">
   <div class="row">
-    <div class="col-lg-12">
-      <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="reference in bcvParser.passages">
-        <li>
-        	<p ng-bind-html="reference.text"></p>
-        </li>
-      </ul>
-    </div>
+    <p class="centered">Please choose your language:</p>
+  	<ul class="nav centered lang-buttons">
+  		<li ng-repeat="(key, language) in dbpGrabber.langmap | orderBy: 'key' ">
+  		    <button type="submit" class="btn btn-primary" ng-click="set_language(key);">{{ key }} - {{ language[2] }}</button>
+  		</li>
+  	</ul>
   </div>
 </div>
 
 <div class="container" ng-show="langu">
-	<ul class="nav centered lang-buttons">
-		<li>
-	  		<button type="submit" class="btn btn-primary " ng-click="remove_language();">Change Language</button>
-		</li>
-	</ul>
+  <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="reference in bcvParser.passages">
+    <div class="row">
+      <li>
+      	<p ng-bind-html="reference.text"></p>
+      </li>
+    </div>
+  </ul>
+</div>
+
+<div class="container" ng-show="langu">
+  <div class="row">
+  	<ul class="nav centered lang-buttons">
+  		<li>
+  	  		<button type="submit" class="btn btn-primary " ng-click="remove_language();">Change Language</button>
+  		</li>
+  	</ul>
+  </div>
 </div>
