updated to improved free text editor

--- a/client/app/verses/verses.html
+++ b/client/app/verses/verses.html
@@ -22,7 +22,7 @@
 <div class="container">
   <div class="row">
     <h3>Sermon Notes</h3>
-    <textarea froala="froalaOptions" ng-model="sermonNotes" placeholder="Add your sermon notes here for small groups to access..."></textarea>
+    <text-angular ng-model="sermonNotes" placeholder="Add your sermon notes here for small groups to access..."></textarea>
   </div>
 </div>
 <div class="container">
