--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
       <link rel="stylesheet" href="../bower_components/froala-wysiwyg-editor/css/plugins/line_breaker.min.css" />
       <link rel="stylesheet" href="../bower_components/froala-wysiwyg-editor/css/plugins/table.min.css" />
       <link rel="stylesheet" href="../bower_components/froala-wysiwyg-editor/css/plugins/video.min.css" />
+      <link rel="stylesheet" href="../bower_components/textAngular/dist/textAngular.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -121,6 +122,15 @@
       <script src="../bower_components/froala-wysiwyg-editor/js/plugins/url.min.js"></script>
       <script src="../bower_components/froala-wysiwyg-editor/js/plugins/video.min.js"></script>
       <script src="../bower_components/angular-froala/src/angular-froala.js"></script>
+      <script src="../bower_components/rangy/rangy-core.js"></script>
+      <script src="../bower_components/rangy/rangy-classapplier.js"></script>
+      <script src="../bower_components/rangy/rangy-highlighter.js"></script>
+      <script src="../bower_components/rangy/rangy-selectionsaverestore.js"></script>
+      <script src="../bower_components/rangy/rangy-serializer.js"></script>
+      <script src="../bower_components/rangy/rangy-textrange.js"></script>
+      <script src="../bower_components/textAngular/dist/textAngular.js"></script>
+      <script src="../bower_components/textAngular/dist/textAngular-sanitize.js"></script>
+      <script src="../bower_components/textAngular/dist/textAngularSetup.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
