--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/png" href="/assets/images/BIYBL device.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
@@ -114,6 +115,7 @@
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/bcvParser/bcvParser.service.js"></script>
+          <script src="app/cobrand/cobrand.service.js"></script>
           <script src="app/dbpGrabber/dbpGrabber.service.js"></script>
           <script src="app/findchurch/findchurch.controller.js"></script>
           <script src="app/findchurch/findchurch.js"></script>
