--- a/client/app/verses/verses.html
+++ b/client/app/verses/verses.html
@@ -8,6 +8,15 @@
 
 <div class="container">
   <div class="row">
+      <div class="url-block">
+        The URL for your church to publish and use is:
+        <a href="http://thebible.at/{{ church }}">{{ globalURL }}/{{ church }}</a>
+      </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
     <form class="thing-form">
       <h3>Enter the passage reference(s) for this week's meeting:</h3>
       <p class="input-group">
@@ -19,11 +28,16 @@
     </form>
   </div>
 </div>
-<div class="container">
-  <div class="row">
-    <h3>Sermon Notes</h3>
-    <text-angular ng-model="sermonNotes" placeholder="Add your sermon notes here for small groups to access..."></textarea>
-  </div>
+
+<div class="container" ng-show="bcvParser.passages.length > 0 && bcvParser.passages[0].text != ''">
+  <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="reference in bcvParser.passages">
+    <div class="row">
+      <li>
+        <p ng-bind-html="reference.text" ng-show="bcvParser.passages[$index].text != ''"></p>
+        <p ng-show="bcvParser.passages[$index].text == ''"><img src="/assets/images/ajax-loader.gif" /></p>
+      </li>
+    </div>
+  </ul>
 </div>
 
 <div class="container">
@@ -34,42 +48,37 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" ng-show="bcvParser.passages.length <= 0 || bcvParser.passages[0].text == ''">
   <div class="row">
-      <div class="url-block">
-        The URL for your church to publish and use is:
-        <a href="http://thebible.at/{{ church }}">http://thebible.at/{{ church }}</a>
-      </div>
+      <h4 class="no-data-notice">There are currently no saved references for this church.</h4>
   </div>
 </div>
 
-<div class="container" ng-show="bcvParser.passages.length > 0 && bcvParser.passages[0].text != ''">
-  <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="reference in bcvParser.passages">
-    <div class="row">
-      <li>
-      	<p ng-bind-html="reference.text" ng-show="bcvParser.passages[$index].text != ''"></p>
-        <p ng-show="bcvParser.passages[$index].text == ''"><img src="/assets/images/ajax-loader.gif" /></p>
-      </li>
-    </div>
-  </ul>
+<div class="container">
+  <div class="row">
+    <h3>Logo</h3>
+    <p>Enter the URL to your logo to brand your theBible.at page.</p>
+    <input type="text" class="form-control" placeholder="e.g. http://www.citychurch.co.uk/logo.png" ng-model="logo" />
+  </div>
 </div>
 
 <div class="container">
   <div class="row">
-    <h4>Choose the most popular languages for your church.  These will be at the top of the list for selection by users.</h4>
+    <h3>Sermon Notes</h3>
+    <text-angular ng-model="sermonNotes" placeholder="Add your sermon notes here for small groups to access..."></textarea>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+  <h3>Popular Languages</h3>
+    <p>Choose the most popular languages for your church.  These will be at the top of the list for selection by users.</p>
     <ul class="nav centered lang-buttons">
       <li ng-repeat="(key, language) in dbpGrabber.langmap | orderBy: 'key' " class="col-md-3 checkbox-li">
           <input type="checkbox" ng-model="$index" ng-click="appendList(key);" ng-checked="langSub.indexOf(key) > -1"> {{ language[2] }} ({{ key }})
           <!--button type="submit" class="btn btn-primary" ng-click="set_language(key);">{{ key }} - {{ language[2] }}</button-->
       </li>
     </ul>
-  </div>
-</div>
-
-
-<div class="container" ng-show="bcvParser.passages.length <= 0 || bcvParser.passages[0].text == ''">
-  <div class="row">
-      <h4 class="no-data-notice">There are currently no saved references for this church.</h4>
   </div>
 </div>
 
